--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: aniket
-description: My CS portfolio, made with Jupyter Notebooks.
+title: Automatic-Spork2
+description: AP Computer Science Principles course materials.
 github_username: AniCricKet
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "automatic-spork"
+github_repo: "automatic-meme"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
@@ -34,7 +34,7 @@ url: "https://AniCricKet.github.io" # the base hostname & protocol for your site
 #
 # 3. You must replace the parameter `baseurl` in _action_files/settings.ini with the same value as you set here but WITHOUT QUOTES.
 #
-baseurl: "/automatic-spork" # the subpath of your site, e.g. "/blog".
+baseurl: "/automatic-meme" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
